# Intelligent-Heating-Pilot

./: ARCHITECTURE.md  AUTOMATED_RELEASE_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  DDD_ARCHITECTURE.md  DEBUGGING.md  DEV_SETUP.md  DOCS_INDEX.md  GITHUB_RELEASE_v0.4.0.md  GITHUB_RELEASE_v0.4.1.md  GITHUB_RELEASE_v0.4.2.md  GITHUB_RELEASE_v0.4.3.md  GITHUB_RELEASE_v0.4.4.md  IMPLEMENTATION_STATUS.md  MIGRATION_GUIDE.md  PHASE_3_4_COMPLETION.md  README.md  SCHEDULER_INTEGRATION.md  VALIDATION_CHECKLIST.md  docker-compose.yml  hacs.json  pyproject.toml
.github/: AGENT_QUICKSTART.md  AGENT_WORKFLOW.md  BRANCHING_STRATEGY.md  CODEOWNERS  GIT_REALIGNMENT_GUIDE.md  copilot-instructions.md  pull_request_template_feature.md  pull_request_template_release.md
.github/agents/: README.md  documentation_specialist.agent.md  project_manager.agent.md  tech_lead.agent.md  testing_specialist.agent.md
.github/workflows/: create-release.yml
custom_components/intelligent_heating_pilot/: __init__.py  calculator.py  config_flow.py  const.py  manifest.json  sensor.py  services.yaml  strings.json  view.py
custom_components/intelligent_heating_pilot/application/: __init__.py  extract_heating_cycles_use_case.py
custom_components/intelligent_heating_pilot/domain/: __init__.py  constants.py
custom_components/intelligent_heating_pilot/domain/entities/: __init__.py  heating_pilot.py
custom_components/intelligent_heating_pilot/domain/interfaces/: __init__.py  cycle_cache.py  decision_strategy.py  device_config_reader.py  heating_cycle_service.py  historical_data_adapter.py  model_storage.py  scheduler_commander.py  scheduler_reader.py  sensor_data_adapter.py  weather_data_adapter.py
custom_components/intelligent_heating_pilot/domain/services/: __init__.py  heating_cycle_service.py  lhs_calculation_service.py  ml_decision_strategy.py  (+2 more)
custom_components/intelligent_heating_pilot/infrastructure/: __init__.py  decision_strategy_factory.py  event_bridge.py  rest_api.py
custom_components/intelligent_heating_pilot/translations/: en.json  fr.json
custom_components/smart_starter_vtherm/: __init__.py  calculator.py  config_flow.py  const.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/smart_starter_vtherm/translations/: fr.json
docs/: CONFIGURATION.md  HOW_IT_WORKS.md  INSTALLATION.md  LOGO_SUBMISSION.md  TROUBLESHOOTING.md  USER_GUIDE.md
examples/: automation.yaml
tests/: conftest.py  test_calculator.py  test_integration.py
tests/integration/: test_component_structure.py
tests/integration/adapters/: README.md  __init__.py  test_climate_data_adapter_integration.py  test_sensor_data_adapter_integration.py  test_weather_data_adapter_integration.py
tests/unit/application/: test_heating_application_service.py
tests/unit/domain/: fixtures.py  test_cycle_cache_data.py  test_decision_strategies.py  test_incremental_cache_workflow.py  test_lhs_calculation_service.py  test_prediction_service.py  test_slope_data.py  test_value_objects.py
tests/unit/infrastructure/: test_vtherm_compat.py
(+31 files in other folders)
